--- a/Password_Generator/static/style.css
+++ b/Password_Generator/static/style.css
@@ -14,10 +14,12 @@ body {
 
 .generator { 
 	background-color: #f5f5f5; 
-	width: 500px;
-	height: 175px; 
-	margin: auto; 
-	padding: 20px; 
+	width: fit-content;
+	height: 300px; 
+	margin : auto;
+	margin-top: 50px;
+	padding-inline: 70px;
+	padding-top: 20px;
 	border-radius: 50px; 
 } 
 
@@ -41,6 +43,7 @@ button {
 	text-transform: uppercase; 
 	padding: 5px 15px; 
 	border: 0; 
+	cursor: pointer;
 	border-radius: 10px; 
 } 
 
@@ -82,11 +85,17 @@ div.options label {
 button.generate { 
 	width: 100%; 
 	margin-top: 10px; 
+	transition: transform 0.2s ease-in-out;
 	padding: 10px; 
 } 
+
+button.generate:hover {
+    transform: scale(1.05);
+}
 
 h1 { 
 	text-align: center; 
 	color: #4c4faf; 
+	padding-bottom: 20px;
 }
 
